0.97.0 UNRELEASED

BUG FIXES

  * Avoid GnomeKeyringCredentialStore traceback on Ubuntu Hardy
    by being more tolerant about gobject methods availability.
    (Vincent Ladeuil, #403430)


0.96.2	2009-07-08

 BUG FIXES

  * Same player shoots again. Version credits.pickle and rebuild the tarball
    after running 'python ./setup.py build_credits', update
    http://bazaar-vcs.org/bzr-gtk/releasing accordingly.  
    (Vincent Ladeuil, #397526)
 
0.96.1	2009-07-08

 BUG FIXES
 
  * Rebuild the tarball after running 'python ./setup.py build_credits',
    update http://bazaar-vcs.org/bzr-gtk/releasing accordingly.
   (Vincent Ladeuil, #397526)
 

0.96.0	2009-07-08

 UI
 
  * Add colored status messages in Olive file list (Jasper Groenewegen)

  * Use the new progress bar implementation from bzrlib.
   (Vincent Ladeuil, 385191)

 CHANGES
 
  * Add ginfo command line option (Jasper Groenewegen)
  
  * Diff window uses GtkSourceView2 now. (Szilveszter Farkas)

 BUG FIXES
 
  * Fix the Branch/Get dialog refusing to open after hitting Cancel. (Markus
  Korn, #294396)

  * Fix Olive homepage URL. (#255152)

  * Fix gannotate.conf handling. (Vincent Ladeuil, #373157)

  * Save commit messages at uncommit time, restore them at
    gcommit time. Also allow saving commit messages if the commit
    is cancelled. (Anne Mohsen, Vincent Ladeuil, #215674)

  * Mark as compatible with bzr 1.13.

 FEATURES

  * Support storing credentials in the GNOME Keyring if it is 
    available. (Jelmer Vernooij)

  * Fix opening Status window in Olive (#316310)

0.95.0	2008-08-04

 UI

  * Added Refresh menu option with F5 keyboard shortcut (Russ Brown)

  * Show progress bars in bzr viz window (Chad Miller, Jelmer Vernooij)

  * Added menu option for indexing branches if bzr-search is present.
    (Jelmer Vernooij)

  * Add "Send Merge Directive" button in bzr viz. (Jelmer Vernooij)

  * Remove dummy "Edit->Find" option. (Jelmer Vernooij)
